--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -16,3 +16,6 @@ spring:
           show_sql: true
           use_sql_comments: true
           format_sql: true
+  logging:
+    com: debug
+    javax: debug
